# launcher

./: .gitignore  Cargo.toml  Dockerfile  README.md  makefile
.devcontainer/: devcontainer.json
.github/: ci.yaml  dependabot.yml
.github/workflows/: ci.yaml
src/: main.rs
src/models/: configuration.rs  download_marker.rs  mod.rs
src/providers/: downloader.rs  extractor.rs  file_marker_manager.rs  marker_manager.rs  mod.rs  unauthenticated_downloader.rs  zip_extractor.rs
test/: launch
