[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["fs", "full", "macros", "rt-multi-thread"] }
openssl = { version = "0.10.72", features = ["vendored"] }
shellexpand = "3.1.1"
sha2 = "0.10.9"
bytes = "1.10.1"
zip = "4.6.0"
serde_yaml = "0.9.34"

[dev-dependencies]
hyper = { version = "1.7.0", features = ["server"] }
iron = "0.6.1"
tempfile = "3.21.0"
